--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.area54labs.jadwalkrl2">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="net.area54labs.jadwalkrl2.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,14 +22,35 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="net.area54labs.jadwalkrl2.SelectorActivity"
-            android:label="@string/title_activity_selector"></activity>
+            android:name=".SelectorActivity"
+            android:label="@string/title_activity_selector">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="net.area54labs.jadwalkrl2.MainActivity" />
+        </activity>
         <activity
-            android:name="net.area54labs.jadwalkrl2.ScheduleActivity"
-            android:label="@string/title_activity_schedule"></activity>
+            android:name=".ScheduleActivity"
+            android:label="@string/title_activity_schedule">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="net.area54labs.jadwalkrl2.MainActivity" />
+        </activity>
         <activity
             android:name=".DetailActivity"
-            android:label="@string/title_activity_route_detail"></activity>
+            android:label="@string/title_activity_route_detail">
+            android:parentActivityName=".ScheduleActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="net.area54labs.jadwalkrl2.ScheduleActivity" />
+        </activity>
+        <activity
+            android:name=".RouteMapActivity"
+            android:label="@string/title_activity_route_map"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="net.area54labs.jadwalkrl2.MainActivity" />
+        </activity>
 
         <provider
             android:name=".data.AppProvider"
@@ -33,10 +59,19 @@
             android:syncable="true" />
 
         <service android:name=".service.ScheduleService" />
+
+        <receiver
+            android:name=".AlarmReciever"
+            android:process=":remote" />
+
+        <activity
+            android:name=".SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="net.area54labs.jadwalkrl2.MainActivity" />
+        </activity>
     </application>
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
-    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
-    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
 </manifest>
